// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppMenu #render authenticated user 1`] = `
<div
  aria-label="tap to close menu"
  className="app-menu"
  onClick={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="app-menu__container"
  >
    <nav
      className="app-menu__nav"
    >
      <header
        className="app-menu__header"
      >
        <div
          className="app-menu__badge-container profile-badge"
        >
          <div
            className="profile-badge__container"
          >
            <div
              className="profile-badge__img-container"
              onClick={[Function]}
              role="button"
              tabIndex="0"
            >
              <img
                alt="Jeff's profile picture"
                className="profile-badge__img"
                src="https://foo.bar"
              />
            </div>
          </div>
        </div>
      </header>
      <section
        className="app-menu__main"
      >
        <div
          className="app-menu__command"
        >
          Command goes here
        </div>
      </section>
    </nav>
  </div>
</div>
`;

exports[`AppMenu #render authenticated user fetching data 1`] = `
<div
  aria-label="tap to close menu"
  className="app-menu"
  onClick={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="app-menu__container"
  >
    <nav
      className="app-menu__nav"
    >
      <header
        className="app-menu__header"
      >
        <div
          className="app-menu__badge-container profile-badge"
        >
          <section
            className="profile-badge__container"
          >
            <div
              className="profile-badge__button-container"
            >
              <button
                className="
      button
      button--disabled
    "
                disabled={true}
                onClick={[MockFunction]}
              >
                <div
                  className="button__content-container"
                >
                  <span
                    className="
      text
      text--sm
      
      
    "
                  >
                    <span>
                      Connecting...
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </section>
          <footer
            className="profile-badge__learn-more-container"
          >
            <a
              className="text text--sm"
              href="https://blockstack.org/about/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more
            </a>
          </footer>
        </div>
      </header>
      <section
        className="app-menu__main"
      >
        <div
          className="app-menu__command"
        >
          Command goes here
        </div>
      </section>
    </nav>
  </div>
</div>
`;

exports[`AppMenu #render unauthenticated user 1`] = `
<div
  aria-label="tap to close menu"
  className="app-menu"
  onClick={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="app-menu__container"
  >
    <nav
      className="app-menu__nav"
    >
      <header
        className="app-menu__header"
      >
        <div
          className="app-menu__badge-container profile-badge"
        >
          <section
            className="profile-badge__container"
          >
            <div
              className="profile-badge__button-container"
            >
              <button
                className="
      button
      
    "
                disabled={false}
                onClick={[MockFunction]}
              >
                <div
                  className="button__content-container"
                >
                  <span
                    className="
      text
      text--sm
      
      
    "
                  >
                    <span>
                      Connect to Blockstack
                    </span>
                  </span>
                </div>
              </button>
            </div>
          </section>
          <footer
            className="profile-badge__learn-more-container"
          >
            <a
              className="text text--sm"
              href="https://blockstack.org/about/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more
            </a>
          </footer>
        </div>
      </header>
      <section
        className="app-menu__main"
      >
        <div
          className="app-menu__command"
        >
          Command goes here
        </div>
      </section>
    </nav>
  </div>
</div>
`;
